# quant-platform

./: .gitignore  ARCHITECTURE.md  BACKTESTING_GUIDE.md  Dockerfile.base  STRATEGY_GUIDE.md  docker-compose.prod.yml  example.env  generate_and_backtest.py  grafana_setup.md  intraday_config.md  pytest.ini  readme.md  run_backtest_demo.py  run_multi_stock_backtest.sh  run_single_stock_test.sh  system_health_check.md  test_fetch.py  test_missing.py  test_upstox.py
.github/workflows/: docker-publish.yml
context/: Designing a New Neural Network.docx  ESTI_HedgeFund_System_Prompt.md  evolutionary_survival_trading_intelligence_theory_paper.md
docs/: KIRA_MODULES.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: terminal.css
infra/: 1-f  docker-compose.yml  final_debug_log.txt
kira-shared/: pyproject.toml
notes/: changes.txt
services/: grafana_setup.md
services/api_gateway/: Dockerfile  main.py  requirements.txt  sync_instruments.py
services/backfiller/: Dockerfile  backfill_multi.py  main.py  requirements.txt  server.py  sync_instruments.py  test_upstox.py  test_upstox_bounds.py
services/edge_detector/: Dockerfile  scanner.py
services/eod_ingestor/: main.py  requirements.txt
services/esti/: Dockerfile  config.py  main.py  requirements.txt
services/feature_engine/: Dockerfile  main.py  microstructure.py  requirements.txt
services/strategy_runtime/cpp/: CMakeLists.txt  bindings.cpp  indicators.h  kira_engine.h  statistics.h  transaction_costs.h
tests/: conftest.py  test_integrated_strategy.py  test_modules.py
(+298 files in other folders)
